tests/samples/invalid/return_as_end.pn
fn main()
{
	var x: i32 = 33;

	{
		if x == 35
			goto return;
		x = x + 1;
		loop;
	}

	return:
	clean_up();
	finish();
}

fn clean_up()
{
	//...
}

fn finish()
{
	//...
}

